--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,10 +11,10 @@ jobs:
       - name: Login to Docker Hub
         users: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USER}}
-          password: ${{ secrets.DOCKERHUB_TOKEN}}
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        users: actions/checkout@2
+        users: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
